--- a/package.json
+++ b/package.json
@@ -1,1 +1,149 @@
-jy
+{
+
+	"name": "Chand-Bot",	"version": "2.1.0",
+
+	"description": "This Bot Made By Mr Chand ",
+
+	"main": "Chand.js",
+
+	"scripts": {
+
+		"start": "node index",
+
+		"login": "node login",
+
+		"test": "node --trace-warnings --use_strict --async-stack-traces mirai"
+
+	},
+
+	"repository": {
+
+		"type": "git",
+
+		"url": "https://github.com/Mrchandu7/pkg"
+
+	},
+
+	"keywords": [
+
+		"Chand Bot",
+
+		"facebook Bot",
+
+		"Best Vision",
+
+		"Messenger Chattbot",
+
+		
+
+	],
+
+	"author": "MR-CHAND",
+
+	"license": "GPL-3.0",
+
+	"bugs": {
+
+		"url": "https://github.com/Mrchandu7/pkg/issues"
+
+	},
+
+	"homepage": "https://github.com/Mrchandu7/pkg",
+
+	"dependencies": {
+
+		"@maihuybao/fca-atf": "^1.3.13-2",
+
+		"@miraipr0ject/assets": "",
+
+		"@replit/database": "^2.0.1",
+
+		"akaneko": "^5.2.2",
+
+		"axios": "^0.26.1",
+
+		"body-parser": "",
+
+		"caesar-salad": "",
+
+		"canvas": "^2.7.0",
+
+		"chalk": "^4.1.2",
+
+		"cheerio": "",
+
+		"child_process": "",
+
+		"colors": "^1.4.0",
+
+		"crypto": "",
+
+		"desuni": "^11.0.5",
+
+		"discord-chatbot": "^2.1.0",
+
+		"eval": "",
+
+		"extract-zip": "",
+
+		"fca-noder": "git+https://github.com/Mrchandu7/fca-atf.git",
+
+		"figlet": "",
+
+		"fs-extra": "^10.0.1",
+
+		"jimp": "",
+
+		"mal-scraper": "^2.11.4",
+
+		"minimist": "",
+
+		"moment-timezone": "^0.5.34",
+
+		"ms": "",
+
+		"nhentai-api": "^3.4.3",
+
+		"node-opus": "^0.3.3",
+
+		"npmlog": "",
+
+		"opusscript": "0.0.8",
+
+		"path": "",
+
+		"pidusage": "^3.0.0",
+
+		"pm2": "^5.1.0",
+
+		"readline": "",
+
+		"request": "^2.88.2",
+
+		"semver": "^7.3.5",
+
+		"sequelize": "^6.17.0",
+
+		"simple-youtube-api": "^5.2.1",
+
+		"sqlite3": "^5.0.2",
+
+		"string-similarity": "",
+
+		"to": "^0.2.9",
+
+		"totp-generator": "",
+
+		"vtuber-wiki": "^1.1.5",
+
+		"wikijs": "^6.3.3",
+
+		"youtubei.js": "^1.4.2",
+
+		"ytdl-core": "^4.11.0",
+
+		"zalgo": "0.0.1"
+
+	}
+
+  }
