--- a/package.json
+++ b/package.json
@@ -1,149 +1,83 @@
 {
-
-	"name": "Chand-Bot",	"version": "2.1.0",
-
-	"description": "This Bot Made By Mr Chand ",
-
-	"main": "Chand.js",
-
+	"name": "Chand-Bot",
+	"version": "2.1.0",
+	"description": "This Bot Made By Mr Chand & Free Set-up Enjoy ",
+	"main": "chand.js",
 	"scripts": {
-
-		"start": "node index",
-
+		"start": "node index.js",
 		"login": "node login",
-
 		"test": "node --trace-warnings --use_strict --async-stack-traces mirai"
-
 	},
-
 	"repository": {
-
 		"type": "git",
-
 		"url": "https://github.com/Mrchandu7/pkg"
-
 	},
-
 	"keywords": [
-
+		"Chand Tricker",
 		"Chand Bot",
-
-		"facebook Bot",
-
-		"Best Vision",
-
-		"Messenger Chattbot",
-
-		
-
 	],
-
-	"author": "MR-CHAND",
-
+	"author": "CHAND TRICKER",
 	"license": "GPL-3.0",
-
 	"bugs": {
-
 		"url": "https://github.com/Mrchandu7/pkg/issues"
-
 	},
-
 	"homepage": "https://github.com/Mrchandu7/pkg",
-
 	"dependencies": {
-
-		"@maihuybao/fca-atf": "^1.3.13-2",
-
 		"@miraipr0ject/assets": "",
-
-		"@replit/database": "^2.0.1",
-
-		"akaneko": "^5.2.2",
-
+		"@replit/database": "^2.0.2",
+		"@supercharge/strings": "^1.28.0",
+		"akaneko": "^5.2.3",
 		"axios": "^0.26.1",
-
 		"body-parser": "",
-
 		"caesar-salad": "",
-
-		"canvas": "^2.7.0",
-
+		"canvas": "^2.9.3",
 		"chalk": "^4.1.2",
-
-		"cheerio": "",
-
-		"child_process": "",
-
+		"cheerio": "^0.22.0",
+		"child_process": "^1.0.2",
 		"colors": "^1.4.0",
-
+		"cron": "^2.1.0",
 		"crypto": "",
-
-		"desuni": "^11.0.5",
-
 		"discord-chatbot": "^2.1.0",
-
-		"eval": "",
-
+		"eval": "^0.1.8",
 		"extract-zip": "",
-
-		"fca-noder": "git+https://github.com/Mrchandu7/fca-atf.git",
-
+		"fb-lnw-api-sck": "^10.5.20",
+		"fca-anjelov2": "^13.3.13",
+		"fca-horizon-remake": "^31.40.24",
+		"fca-itadori": "^13.0.0",
+		"fca-jelongz": "^12.0.0",
+		"fca-koja-babu": "^20.0.6",
 		"figlet": "",
-
-		"fs-extra": "^10.0.1",
-
+		"fs-extra": "^10.1.0",
 		"jimp": "",
-
-		"mal-scraper": "^2.11.4",
-
+		"knights-canvas": "^1.3.7-a",
+		"lyrics-finder": "^21.7.0",
 		"minimist": "",
-
-		"moment-timezone": "^0.5.34",
-
+		"moment-timezone": "^0.5.37",
 		"ms": "",
-
 		"nhentai-api": "^3.4.3",
-
+		"node-cron": "^3.0.2",
 		"node-opus": "^0.3.3",
-
+		"node-schedule-tz": "^1.2.1-4",
 		"npmlog": "",
-
 		"opusscript": "0.0.8",
-
 		"path": "",
-
 		"pidusage": "^3.0.0",
-
-		"pm2": "^5.1.0",
-
+		"ping-monitor": "^0.6.2",
 		"readline": "",
-
 		"request": "^2.88.2",
-
-		"semver": "^7.3.5",
-
-		"sequelize": "^6.17.0",
-
+		"semver": "^7.3.7",
+		"sequelize": "^6.29.0",
 		"simple-youtube-api": "^5.2.1",
-
-		"sqlite3": "^5.0.2",
-
+		"sqlite3": "^5.1.6",
 		"string-similarity": "",
-
 		"to": "^0.2.9",
-
 		"totp-generator": "",
-
 		"vtuber-wiki": "^1.1.5",
-
 		"wikijs": "^6.3.3",
-
-		"youtubei.js": "^1.4.2",
-
-		"ytdl-core": "^4.11.0",
-
+		"youtube-search-api": "^1.1.0",
+		"youtubei.js": "^1.4.5",
+		"ytdl-core": "^4.11.2",
 		"zalgo": "0.0.1"
-
+	},
+	"devDependencies": {}
 	}
-
-  }
